2016-09-11  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/client/JSONResponseHandler.java:
	Initial writing.

	* src/main/java/ball/http/client/method/AnnotatedHttpUriRequest.java:
	Avoid infinite recursion in
	AnnotatedHttpUriRequest.getAllHeaders() implementations.

	* src/main/java/ball/http/ant/taskdefs/HTTPTask.java:
	In log(HttpEntity), do not call HttpEntity.writeTo(OutputStream)
	if it is not repeatable.

	* src/main/java/ball/http/annotation/processing/URISpecificationProcessor.java:
	Use URIBuilder to test URISpecification.value().

2016-09-10  Allen D. Ball  <ball@sol.local>

	* Created AnnotatedHttpUriRequest, annotaions, anotation
	processors, and subclass implementations.

	* src/main/java/ball/http/ant/taskdefs/HTTPTask.java:
	Refactored to provide an abstract base class for any HTTP API
	task.
	Implement HttpRequestInterceptor and HttpResponseInterceptor to
	log messages.
	Initialize Task attributes from Project Properties.

2016-08-27  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/ant/taskdefs/HTTPTask.java:
	Use URIBuilder and PropertiesImpl.configure(Object).

2016-04-03  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/http/ant/taskdefs/HTTPTask.java:
	Added ability to configure HTTPUriRequest through Ant properties.

2016-03-12  Allen D. Ball  <ball@sol.local>

	* Initial writing.
